2009-04-01  Dan Osipov <dosipov@phillyburbs.com>

	* #10350: Form problems using MSIE (Thanks to Michael Stucki)
	
2009-02-08  Michael Stucki  <michael@typo3.org>

	* #10347: Categories valid for "All" languages are not fetched by category tree selector (Thanks to Francois Suter)

2009-01-31  Dan Osipov <dosipov@phillyburbs.com>

	* #9653: Field Selector disappears when switching from list to thumbs (Thanks to Michiel Roos)
	* #10172: Remove check for TYPO3 compat version 4.2.0 from class.tx_dam_browse_media.php (Thanks to Michiel Roos)
	* #10265: Cleanup compat/class.ux_template.php after release of TYPO3 4.2.5 (Thanks to Michiel Roos)
	* #10193: Deleting a file shows faulty references warning (Thanks to Michiel Roos)
	
2009-01-29  Michiel Roos <michiel@netcreators.com>

	* #10271: dam calls deprecated function t3lib_div::uniqueArray() (Thanks to Uschi Renziehausen)
	* #10270: dam has multiple calls to deprecated function t3lib_div::fixed_lgd() (Thanks to Uschi Renziehausen)
	
2009-01-18  Michiel Roos <michiel@netcreators.com>

	* #8646: Click on icon before title does not react (Thanks to Uschi Renziehausen)
	
2009-01-17  Michiel Roos <michiel@netcreators.com>

	* #10171: compat directory needs cleanup
	* #9922: Debug information present in media browser

2009-01-15  Michiel Roos <michiel@netcreators.com>

	* #10149 dam should conflict with dam_info (Thanks to Michael Stucki)

2009-01-12  Michiel Roos <michiel@netcreators.com>

	* #10077 Add Icons to page:module TCEform

2008-12-26  Michiel Roos <michiel@netcreators.com>

	* #10016 added file compat/class.ux_template.php (excuse me)

2008-12-26  Michiel Roos <michiel@netcreators.com>

	* Setting version to 1.1.0
	* DAM now requires TYPO3 version 4.2.3 because of http://bugs.typo3.org/view.php?id=10016
	* Updated manual (Setup DAM-Backend-Permissions (Backend-Users/Groups))
	* Removed execute permission from Changelog and ext_update.php